--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="input-container">
         <div class="input-box">
           <label for="username">ชื่อผู้ใช้:</label>
-          <input type="text" id="username" />
+          <input type="text" id="username" value="" />
         </div>
 
         <div class="input-box">
@@ -22,7 +22,7 @@
         </div>
       </div>
 
-      <button id="submit-btn">เข้าสู่ระบบ</button>
+      <button id="submit-btn" onclick="login()" >เข้าสู่ระบบ</button>
       <p id="errorMessage" class="error-message"></p>
     </div>
 
